--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Sushi Swap 🍣</h1>
+<h1>Sushi Swap <img src="assets/sushi.svg"></h1>
 
 <mat-tab-group mat-align-tabs="center">
   <mat-tab label="Market Order">
