--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1>Sushi Swap <img src="assets/sushi.svg"></h1>
+<header>
+  <img src="assets/sushi.svg">
+  <h1>Sushi Swap</h1>
+</header>
 
 <mat-tab-group mat-align-tabs="center">
   <mat-tab label="Market Order">
